--- a/environment.yml
+++ b/environment.yml
@@ -1,90 +1,142 @@
 name: SVOBG
 channels:
+  - pytorch
+  - nvidia
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - blas=1.0=mkl
+  - brotli-python=1.0.9=py311h6a678d5_8
   - bzip2=1.0.8=h5eee18b_6
   - ca-certificates=2024.7.2=h06a4308_0
+  - certifi=2024.8.30=py311h06a4308_0
+  - charset-normalizer=3.3.2=pyhd3eb1b0_0
+  - cuda-cudart=11.8.89=0
+  - cuda-cupti=11.8.87=0
+  - cuda-libraries=11.8.0=0
+  - cuda-nvrtc=11.8.89=0
+  - cuda-nvtx=11.8.86=0
+  - cuda-runtime=11.8.0=0
+  - cuda-version=12.6=3
+  - ffmpeg=4.3=hf484d3e_0
+  - filelock=3.13.1=py311h06a4308_0
+  - freetype=2.12.1=h4a9f257_0
+  - gmp=6.2.1=h295c915_3
+  - gmpy2=2.1.2=py311hc9b5ff0_0
+  - gnutls=3.6.15=he1e5248_0
+  - idna=3.7=py311h06a4308_0
+  - intel-openmp=2023.1.0=hdb19cb5_46306
+  - jinja2=3.1.4=py311h06a4308_0
+  - jpeg=9e=h5eee18b_3
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
+  - libcublas=11.11.3.6=0
+  - libcufft=10.9.0.58=0
+  - libcufile=1.11.1.6=0
+  - libcurand=10.3.7.68=0
+  - libcusolver=11.4.1.48=0
+  - libcusparse=11.7.5.86=0
+  - libdeflate=1.17=h5eee18b_1
   - libffi=3.4.4=h6a678d5_1
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h5eee18b_3
+  - libidn2=2.3.4=h5eee18b_0
+  - libjpeg-turbo=2.0.0=h9bf148f_0
+  - libnpp=11.8.0.86=0
+  - libnvjpeg=11.9.0.86=0
+  - libpng=1.6.39=h5eee18b_0
   - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.19.0=h5eee18b_0
+  - libtiff=4.5.1=h6a678d5_0
+  - libunistring=0.9.10=h27cfd23_0
   - libuuid=1.41.5=h5eee18b_0
+  - libwebp-base=1.3.2=h5eee18b_0
+  - llvm-openmp=14.0.6=h9e868ea_0
+  - lz4-c=1.9.4=h6a678d5_1
+  - markupsafe=2.1.3=py311h5eee18b_0
+  - mkl=2023.1.0=h213fc3f_46344
+  - mkl-service=2.4.0=py311h5eee18b_1
+  - mkl_fft=1.3.10=py311h5eee18b_0
+  - mkl_random=1.2.7=py311ha02d727_0
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.2=hb69a4c5_1
+  - mpmath=1.3.0=py311h06a4308_0
   - ncurses=6.4=h6a678d5_0
-  - openssl=3.0.14=h5eee18b_0
+  - nettle=3.7.3=hbbd107a_1
+  - networkx=3.2.1=py311h06a4308_0
+  - openh264=2.1.1=h4ff587b_0
+  - openjpeg=2.5.2=he7f1fd0_0
+  - openssl=3.0.15=h5eee18b_0
+  - pillow=10.4.0=py311h5eee18b_0
   - pip=24.2=py311h06a4308_0
+  - pysocks=1.7.1=py311h06a4308_0
   - python=3.11.9=h955ad1f_0
+  - pytorch=2.4.1=py3.11_cuda11.8_cudnn9.1.0_0
+  - pytorch-cuda=11.8=h7e8668a_5
+  - pytorch-mutex=1.0=cuda
+  - pyyaml=6.0.1=py311h5eee18b_0
   - readline=8.2=h5eee18b_0
+  - requests=2.32.3=py311h06a4308_0
   - setuptools=72.1.0=py311h06a4308_0
   - sqlite=3.45.3=h5eee18b_0
+  - sympy=1.13.2=py311h06a4308_0
+  - tbb=2021.8.0=hdb19cb5_0
   - tk=8.6.14=h39e8969_0
+  - torchaudio=2.4.1=py311_cu118
+  - torchtriton=3.0.0=py311
+  - torchvision=0.19.1=py311_cu118
+  - typing_extensions=4.11.0=py311h06a4308_0
+  - urllib3=2.2.2=py311h06a4308_0
   - wheel=0.43.0=py311h06a4308_0
   - xz=5.4.6=h5eee18b_1
+  - yaml=0.2.5=h7b6447c_0
   - zlib=1.2.13=h5eee18b_1
+  - zstd=1.5.5=hc292b87_2
   - pip:
       - addict==2.4.0
       - asttokens==2.4.1
       - attrs==24.2.0
       - blinker==1.8.2
-      - certifi==2024.8.30
-      - charset-normalizer==3.3.2
       - click==8.1.7
       - comm==0.2.2
       - configargparse==1.7
       - contourpy==1.3.0
       - cycler==0.12.1
-      - dash==2.17.1
+      - dash==2.18.0
       - dash-core-components==2.0.0
       - dash-html-components==2.0.0
       - dash-table==5.0.0
       - decorator==5.1.1
-      - executing==2.0.1
+      - executing==2.1.0
       - fastjsonschema==2.20.0
-      - filelock==3.13.1
       - flask==3.0.3
       - fonttools==4.53.1
-      - fsspec==2024.2.0
-      - idna==3.8
-      - importlib-metadata==8.4.0
+      - importlib-metadata==8.5.0
       - ipython==8.27.0
       - ipywidgets==8.1.5
       - itsdangerous==2.2.0
       - jedi==0.19.1
-      - jinja2==3.1.3
       - joblib==1.4.2
       - jsonschema==4.23.0
       - jsonschema-specifications==2023.12.1
       - jupyter-core==5.7.2
       - jupyterlab-widgets==3.0.13
-      - kiwisolver==1.4.5
-      - markupsafe==2.1.5
+      - kiwisolver==1.4.7
       - matplotlib==3.9.2
       - matplotlib-inline==0.1.7
-      - mpmath==1.3.0
       - nbformat==5.10.4
       - nest-asyncio==1.6.0
-      - networkx==3.2.1
       - numpy==1.26.3
-      - nvidia-cublas-cu11==11.11.3.6
-      - nvidia-cuda-cupti-cu11==11.8.87
-      - nvidia-cuda-nvrtc-cu11==11.8.89
-      - nvidia-cuda-runtime-cu11==11.8.89
-      - nvidia-cudnn-cu11==9.1.0.70
-      - nvidia-cufft-cu11==10.9.0.58
-      - nvidia-curand-cu11==10.3.0.86
-      - nvidia-cusolver-cu11==11.4.1.48
-      - nvidia-cusparse-cu11==11.7.5.86
-      - nvidia-nccl-cu11==2.20.5
-      - nvidia-nvtx-cu11==11.8.86
       - open3d==0.18.0
       - packaging==24.1
       - pandas==2.2.2
       - parso==0.8.4
       - pexpect==4.9.0
-      - pillow==10.2.0
-      - platformdirs==4.2.2
+      - platformdirs==4.3.2
       - plotly==5.24.0
       - prompt-toolkit==3.0.47
       - ptyprocess==0.7.0
@@ -93,29 +145,21 @@ dependencies:
       - pyparsing==3.1.4
       - pyquaternion==0.9.9
       - python-dateutil==2.9.0.post0
-      - pytz==2024.1
-      - pyyaml==6.0.2
+      - pytz==2024.2
       - referencing==0.35.1
-      - requests==2.32.3
       - retrying==1.3.4
       - rpds-py==0.20.0
-      - scikit-learn==1.5.1
+      - scikit-learn==1.5.2
       - scipy==1.14.1
       - six==1.16.0
       - stack-data==0.6.3
-      - sympy==1.12
       - tenacity==9.0.0
       - threadpoolctl==3.5.0
-      - torch==2.4.0+cu118
-      - torchaudio==2.4.0+cu118
-      - torchvision==0.19.0+cu118
       - tqdm==4.66.5
       - traitlets==5.14.3
-      - triton==3.0.0
-      - typing-extensions==4.9.0
       - tzdata==2024.1
-      - urllib3==2.2.2
       - wcwidth==0.2.13
       - werkzeug==3.0.4
       - widgetsnbextension==4.0.13
       - zipp==3.20.1
+
